[package]
name = "sol-util"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-gen = "0.3.1"
anchor-idl = "0.3.1"
solana-client = "2.2.2"
solana-sdk = "2.2.2"
solana-account-decoder = "2.2.2"
solana-cli = "2.2.2"
solana-cli-output = "2.2.2"
base64 = "0.22.1"
bincode = "1.3.3"
serde_json = "1.0"
sha2 = "0.10.8"
clap = { version = "4.1.8", features = ["derive"] }
sol-tools = { path = "../sol-tools" }
